--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div class="container">
+        <a class="line" href="Messenger/index.html">Messenger</a>
         <a class="line" href="WhackMole/index.html">Whack a mole</a>
         <a class="line" href="PilotsBros/index.html">Pilots Bros</a>
         <a class="line" href="Countdown/index.html">Countdown</a>
