--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Main</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <a class="line" href="Messenger/index.html">Messenger</a>
-        <a class="line" href="WhackMole/index.html">Whack a mole</a>
-        <a class="line" href="PilotsBros/index.html">Pilots Bros</a>
-        <a class="line" href="Countdown/index.html">Countdown</a>
-        <a class="line" href="Artstation/index.html">Artstation</a>
+        <a class="line" href="indexmessage.html">Messenger</a>
+        <a class="line" href="indexwhackmole.html">Whack a mole</a>
+        <a class="line" href="indexpilots.html">Pilots Bros</a>
+        <a class="line" href="indexcount.html">Countdown</a>
+        <a class="line" href="index.html">Artstation</a>
     </div>
 </body>
 </html>
